--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,17 @@
     "configurations": [
         {
             "name": "train",
-            "type": "python",
+            "type": "debugpy",
             "python": "/root/miniconda3/bin/python",
-            "program": "/root/mappo/MAPPO4Beamforming/train.py",
+            "program": "./MAPPO4Beamforming/train.py",
             "console": "integratedTerminal",
             "request": "launch"
         },
         {
             "name": "train_ddpg",
-            "type": "python",
+            "type": "debugpy",
             "python": "/root/miniconda3/bin/python",
-            "program": "/root/mappo/ADC-MADDPG/main_openai.py",
+            "program": "./ADC-MADDPG/main_openai.py",
             "console": "integratedTerminal",
             "request": "launch"
         }
